--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+desktop.ini
+
+# User project files
+*.pro.user
+*.vcxproj.user
+
+# Generated files
+Makefile
+Makefile*.*
+
+*.autosave
+debug/
+release/
+build/
+.vs/
+.qtc_clangd/
+
 # Prerequisites
 *.d
 
